Fix task title overflow and line break. Order tasks in ASC order based on trigger time

--- a/public/css/task.css
+++ b/public/css/task.css
@@ -26,6 +26,31 @@
 	background: #f1f1f1;
 }
 
+.task-left {
+	box-sizing: border-box;
+	width: 60px;
+	float: left;
+}
+
+.task-middle {
+	box-sizing: border-box;
+	float: left;
+	overflow: hidden;
+	white-space: nowrap;
+	width: 60%;
+}
+
+.task-right {
+	box-sizing: border-box;
+	float: right;
+	display: table;
+}
+
+.task-check-container {
+	height: 100%;
+	display: block;
+}
+
 .task-check {
 	margin-top: 7px;
 	box-sizing: border-box;
